--- a/src/about/About.css
+++ b/src/about/About.css
@@ -3,7 +3,9 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  flex: 1 1 auto;
   height: 100%;
+  margin-top: 3em;
 }
 
 .bottom-container {
