--- a/src/contact/Contact.css
+++ b/src/contact/Contact.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   word-wrap: break-word;
   white-space: pre-wrap;
   text-align: center;
