--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -42,7 +42,7 @@
   position: relative;
   width: 100%;
   height: 50vh;
-  min-height: 100%;
+  max-height: 100%;
   margin: 1em;
   background-position: center;
   background-size: cover;
